--- a/src/content/posts/day-0-blueprint-a-small-scale-poc.mdx
+++ b/src/content/posts/day-0-blueprint-a-small-scale-poc.mdx
@@ -38,6 +38,10 @@ tags: ["Home Data Center", "Kubernetes", "Docker", "POC", "Linux", "Hardware", "
 _Disclaimer: I am not affiliated with any of the brands or products mentioned in this post, and I do not receive any compensation for the links provided. These links are included solely for your convenience to help you find more information._
 
 import { Image } from 'astro:assets';
+import definingBlueprintImage from '../../../public/images/blog/day-0-blueprint-a-small-scale-poc/Defining the Day 0 Blueprint Strategy Before Setup.jpg';
+import hardwareDeepDiveImage from '../../../public/images/blog/day-0-blueprint-a-small-scale-poc/Hardware Deep Dive Choosing and Equipping Your POC Platform (SBC, Laptop, Desktop, or Mini PC).jpg';
+import operatingSystemImage from '../../../public/images/blog/day-0-blueprint-a-small-scale-poc/The Operating System Linux Power with a Friendly Start.jpg';
+import wrappingUpImage from '../../../public/images/blog/day-0-blueprint-a-small-scale-poc/Wrapping Up Day 0 Your Blueprint is Ready!.webp';
 
 Welcome back to the "[Chronicles of a Home Data Center](https://blog.skill-wanderer.com/category/home-data-center/setup-home-data-center-series/)"! In our "[Day -1](https://blog.skill-wanderer.com/chronicles-of-a-home-data-center-day-1/)" post, we laid the essential groundwork – wrestling with the 'why,' defining goals, facing the budget, acknowledging potential pitfalls (and the critical 'Wife Acceptance Factor' – hopefully, your blinking lights are less controversial than mine!). We covered the crucial preparation needed before diving into the technical deep end.
 
@@ -50,7 +54,7 @@ Consider this your guide to translating ambition into an actionable Day 0 strate
 ## Defining the Day 0 Blueprint: Strategy Before Setup
 
 <Image 
-  src="/images/blog/day-0-blueprint-a-small-scale-poc/Defining the Day 0 Blueprint Strategy Before Setup.jpg"
+  src={definingBlueprintImage}
   alt="Defining the Day 0 Blueprint: Strategy Before Setup"
   class="rounded-lg shadow-lg mb-6"
 />
@@ -88,7 +92,7 @@ With the idea of the [Blueprint](https://en.wikipedia.org/wiki/Blueprint) define
 ## Embracing the Small-Scale POC: Your First Iteration
 
 <Image 
-  src="/images/blog/day-0-blueprint-a-small-scale-poc/Defining the Day 0 Blueprint Strategy Before Setup.jpg"
+  src={definingBlueprintImage}
   alt="Embracing the Small-Scale POC: Your First Iteration"
   class="rounded-lg shadow-lg mb-6"
 />
@@ -151,7 +155,7 @@ By meticulously planning this [Small-Scale POC](https://en.wikipedia.org/wiki/Pr
 ## Hardware Deep Dive: Choosing and Equipping Your POC Platform (SBC, Laptop, Desktop, or Mini PC)
 
 <Image 
-  src="/images/blog/day-0-blueprint-a-small-scale-poc/Hardware Deep Dive Choosing and Equipping Your POC Platform (SBC, Laptop, Desktop, or Mini PC).jpg"
+  src={hardwareDeepDiveImage}
   alt="Hardware Deep Dive: Choosing and Equipping Your POC Platform"
   class="rounded-lg shadow-lg mb-6"
 />
@@ -271,7 +275,7 @@ Choosing your hardware platform, verifying specs, and identifying necessary purc
 ## The Operating System: Linux Power with a Friendly Start
 
 <Image 
-  src="/images/blog/day-0-blueprint-a-small-scale-poc/The Operating System Linux Power with a Friendly Start.jpg"
+  src={operatingSystemImage}
   alt="The Operating System: Linux Power with a Friendly Start"
   class="rounded-lg shadow-lg mb-6"
 />
@@ -338,7 +342,7 @@ So, while you're free to choose any Linux distribution you prefer, be prepared f
 ## Wrapping Up Day 0: Your Blueprint is Ready!
 
 <Image 
-  src="/images/blog/day-0-blueprint-a-small-scale-poc/Wrapping Up Day 0 Your Blueprint is Ready!.webp"
+  src={wrappingUpImage}
   alt="Wrapping Up Day 0: Your Blueprint is Ready!"
   class="rounded-lg shadow-lg mb-6"
 />
