--- a/src/content/posts/day-0-blueprint-a-small-scale-poc.mdx
+++ b/src/content/posts/day-0-blueprint-a-small-scale-poc.mdx
@@ -43,7 +43,7 @@ import hardwareDeepDiveImage from '../../../public/images/blog/day-0-blueprint-a
 import operatingSystemImage from '../../../public/images/blog/day-0-blueprint-a-small-scale-poc/The Operating System Linux Power with a Friendly Start.jpg';
 import wrappingUpImage from '../../../public/images/blog/day-0-blueprint-a-small-scale-poc/Wrapping Up Day 0 Your Blueprint is Ready!.webp';
 
-Welcome back to the "[Chronicles of a Home Data Center](https://blog.skill-wanderer.com/category/home-data-center/setup-home-data-center-series/)"! In our "[Day -1](https://blog.skill-wanderer.com/chronicles-of-a-home-data-center-day-1/)" post, we laid the essential groundwork – wrestling with the 'why,' defining goals, facing the budget, acknowledging potential pitfalls (and the critical 'Wife Acceptance Factor' – hopefully, your blinking lights are less controversial than mine!). We covered the crucial preparation needed before diving into the technical deep end.
+Welcome back to the "[Chronicles of a Home Data Center](https://wanderings.skill-wander.com/category/home-data-center/setup-home-data-center-series/)"! In our "[Day -1](https://wanderings.skill-wander.com/chronicles-of-a-home-data-center-day-1/)" post, we laid the essential groundwork – wrestling with the 'why,' defining goals, facing the budget, acknowledging potential pitfalls (and the critical 'Wife Acceptance Factor' – hopefully, your blinking lights are less controversial than mine!). We covered the crucial preparation needed before diving into the technical deep end.
 
 Now, if that initial exploration got you thinking, "Alright, I understand the prep work, I'm ready to actually figure out how to start planning the technical side of my own home data center," then you've arrived at the perfect next step: Day 0.
 
