add youtube video

--- a/src/content/posts/day-0-blueprint-a-small-scale-poc.mdx
+++ b/src/content/posts/day-0-blueprint-a-small-scale-poc.mdx
@@ -97,6 +97,8 @@ With the idea of the [Blueprint](https://en.wikipedia.org/wiki/Blueprint) define
   class="rounded-lg shadow-lg mb-6"
 />
 
+
+
 With our Day 0 Blueprint taking shape, we arrive at its heart: the [Small-Scale Proof of Concept (POC)](https://en.wikipedia.org/wiki/Proof_of_concept). This isn't just a buzzword; it's the planned output of our Day 0 efforts, our carefully considered "Iteration Zero." It's the first concrete step we'll take (in a future "Day 1" post!) on our journey from zero to a functioning home data center.
 
 ### Why Embrace Starting Small?
@@ -188,6 +190,17 @@ Now let's look at the practical differences between the common low-cost options:
 
 There are many excellent videos on YouTube exploring the setup and capabilities of powerful SBCs like the Orange Pi 5 Plus for homelab use. Searching for reviews or specific setup guides for the model you're considering is highly recommended if you want a visual deep dive.
 
+
+<div class="aspect-w-16 aspect-h-9 rounded-lg overflow-hidden border-2 shadow-xl">
+  <iframe 
+    src="https://www.youtube.com/embed/SL1lsBJNBMI?si=wmFx6CjNWWclHFNh"
+    title="YouTube video player" 
+    class="w-full h-full"
+    allowfullscreen>
+  </iframe>
+</div>
+
+
 ### Option 2: [Old Laptops](https://en.wikipedia.org/wiki/Laptop)
 
 • **Examples**: Any laptop potentially gathering dust.
@@ -217,6 +230,16 @@ Similar to laptops, the basic desktop form factor is generally well understood. 
 • **POC Suitability**: Excellent, versatile platform. Comfortably handles Docker, multi-container apps, K3s (single or small multi-node). A great balance you can grow with. Often ship with NVMe SSDs.
 
 Numerous video reviews comparing Mini PC models suitable for home data center use are available on YouTube. Searching for specific brands like Beelink or Minisforum, or terms like 'mini pc homelab', is a good starting point if you want visual comparisons.
+
+
+<div class="aspect-w-16 aspect-h-9 rounded-lg overflow-hidden border-2 shadow-xl">
+  <iframe 
+    src="https://www.youtube.com/embed/BTGUioeht6I?si=5ZMRQvN47wK72lXg"
+    title="YouTube video player" 
+    class="w-full h-full"
+    allowfullscreen>
+  </iframe>
+</div>
 
 ### Recommended Specs for Your POC (and Planning for Scale)
 
