--- a/src/content/posts/day-0-blueprint-a-small-scale-poc.mdx
+++ b/src/content/posts/day-0-blueprint-a-small-scale-poc.mdx
@@ -140,13 +140,13 @@ We've established that our initial Proof of Concept ([POC](https://en.wikipedia.
 
 If budget allows, or if you simply prefer the convenience and potentially higher performance of new hardware, investing in a capable [Mini PC](https://en.wikipedia.org/wiki/Mini_PC) or even entry-level [server](https://en.wikipedia.org/wiki/Server_(computing)) gear is absolutely a valid path. For the purposes of this initial Day 0 planning and our [Small-Scale POC](https://en.wikipedia.org/wiki/Proof_of_concept), however, we'll lean into the low-cost philosophy, as it's often the most accessible and educational starting point.
 
-To give you a concrete idea of applying this philosophy, my own current home data center utilizes a mix: an old [Lenovo ThinkPad T480 laptop](https://www.lenovo.com/us/en/p/laptops/thinkpad/thinkpadt/thinkpad-t480/22tp2tt4800?orgRef=https%253A%252F%252Fwww.google.com%252F&srsltid=AfmBOoobX3kMlwN0MXXSKkw-lwE0cOtWl80Tc2jO-NoOmBHjWpp-jDu1) (upgraded to 32GB RAM with a 500GB SSD, running an 8-thread Intel CPU) acting as a workhorse, alongside a powerful [Orange Pi 5 Plus SBC](http://www.orangepi.org/html/hardWare/computerAndMicrocontrollers/details/Orange-Pi-5-plus.html) (boasting an 8-core ARM CPU, 32GB RAM, and 256GB onboard eMMC storage). This combination showcases how both repurposed x86 hardware and capable modern ARM SBCs can be effectively leveraged.
+To give you a concrete idea of applying this philosophy, my own current home data center utilizes a mix: an old [Lenovo ThinkPad T480 laptop](https://www.lenovo.com/us/en/p/laptops/thinkpad/thinkpadt/thinkpad-t480/22tp2tt4800?orgRef=https%253A%252F%252Fwww.google.com%252F&srsltid=AfmBOoobX3kMlwN0MXXSKkw-lwE0cOtWl80Tc2jO-NoOmBHjWpp-jDu1) (upgraded to 32GB RAM with a 500GB SSD, running an 8-thread Intel CPU) acting as a workhorse, alongside a powerful [Orange Pi 5 Plus SBC](https://www.orangepi.org/html/hardWare/computerAndMicrocontrollers/details/Orange-Pi-5-plus.html) (boasting an 8-core ARM CPU, 32GB RAM, and 256GB onboard eMMC storage). This combination showcases how both repurposed x86 hardware and capable modern ARM SBCs can be effectively leveraged.
 
 Now let's look at the practical differences between the common low-cost options:
 
 ### Option 1: [Single-Board Computers (SBCs)](https://en.wikipedia.org/wiki/Single-board_computer)
 
-• **Examples**: [Raspberry Pi (various models)](https://www.raspberrypi.com/), [Orange Pi](http://www.orangepi.org/), [Banana Pi](https://banana-pi.org/), etc.
+• **Examples**: [Raspberry Pi (various models)](https://www.raspberrypi.com/), [Orange Pi](https://www.orangepi.org/), [Banana Pi](https://banana-pi.org/), etc.
 • **Pros**: Energy Sippers; Tiny Footprint; Good Community (esp. RPi); [GPIO Access](https://en.wikipedia.org/wiki/General-purpose_input/output).
 • **Cons**: Limited Horsepower (check specs!); ARM Compatibility (occasional issues); RAM is usually fixed/non-upgradeable.
 
