Support multiple categories for blog posts
Refactored blog post schema and UI to allow posts to have either a single 'category' or multiple 'categories'. Updated filtering, display, and metadata logic across config, layouts, index, post, and RSS feed to handle both fields and ensure backward compatibility.

--- a/src/content/posts/wanderers-log-2-home-data-center-day-1-practical-poc-single-node.mdx
+++ b/src/content/posts/wanderers-log-2-home-data-center-day-1-practical-poc-single-node.mdx
@@ -3,7 +3,7 @@ title: "Wanderer's Log #2 & Home Data Center Day 1: A Practical POC on a Single 
 description: "From blueprint to reality: Building your first home data center proof of concept on a single machine with Ubuntu Desktop, Docker, WordPress, and Cloudflare"
 authorId: "quan-nguyen"
 publishDate: "2025-08-17"
-category: "Home Data Center"
+categories: ["Home Data Center", "Skill-Wanderer Journey"]
 readTime: "16 min read"
 image: "/images/blog/wanderers-log-2-home-data-center-day-1-practical-poc-single-node/hero.jpg"
 tags: ["Wanderer's Log", "Home Data Center", "POC", "Docker", "WordPress", "Ubuntu", "Cloudflare", "Single Node", "Kubernetes"]
