Add Skill-Wanderer about image to blog post
Imported and displayed the 'about skill-wanderer.jpg' image in the 'wanderers-log-2-home-data-center-day-1-practical-poc-single-node' blog post to visually enhance the section describing Skill-Wanderer.

--- a/src/content/posts/wanderers-log-2-home-data-center-day-1-practical-poc-single-node.mdx
+++ b/src/content/posts/wanderers-log-2-home-data-center-day-1-practical-poc-single-node.mdx
@@ -19,6 +19,7 @@ import techComponentsImage from '../../../public/images/blog/wanderers-log-2-hom
 import hardwareToLiveImage from '../../../public/images/blog/wanderers-log-2-home-data-center-day-1-practical-poc-single-node/hardware-to-live-webstite.jpg';
 import pocSuccessImage from '../../../public/images/blog/wanderers-log-2-home-data-center-day-1-practical-poc-single-node/POC-success-metric-and-internet-speed-check.jpg';
 import nextStepsImage from '../../../public/images/blog/wanderers-log-2-home-data-center-day-1-practical-poc-single-node/next-step.jpg';
+import aboutSkillWandererImage from '../../../public/images/blog/wanderers-log-2-home-data-center-day-1-practical-poc-single-node/about skill-wanderer.jpg';
 
 > **📊 Visual Summary**: Want a quick overview? Check out our [Day 1 POC infographic](/infographics/blog/wanderers-log-2-home-data-center-day-1-practical-poc-single-node/day-1-poc-infographic.html) that highlights the three-step journey from hardware to live website.
 
@@ -161,6 +162,8 @@ Your hands-on learning destination where theory meets practice. Our comprehensiv
 We're actively developing a dedicated community microservice that will connect learners, facilitate collaboration, and create spaces for knowledge sharing. This will be the heart of peer-to-peer learning and mentorship within the Skill-Wanderer ecosystem.
 
 ### About Skill-Wanderer: Where Education Meets Real-World Impact
+
+<Image src={aboutSkillWandererImage} alt="About Skill-Wanderer: Where Education Meets Real-World Impact" class="w-full h-auto rounded-lg shadow-lg mb-8" />
 
 Skill-Wanderer operates as a **non-profit technology education organization** with a unique dual approach that sets us apart:
 
