Add video walkthrough embeds to Day 0 and Day 1 posts
Embedded YouTube video walkthroughs have been added to the Day 0 blueprint and Day 1 practical POC blog posts, providing readers with an alternative video format for the content.

--- a/src/content/posts/wanderers-log-2-home-data-center-day-1-practical-poc-single-node.mdx
+++ b/src/content/posts/wanderers-log-2-home-data-center-day-1-practical-poc-single-node.mdx
@@ -33,6 +33,20 @@ However, as promised, this series is a guide. For today, we'll focus on a Proof 
 
 For this Day 1, we will focus on one computer device. So, choose one machine to be the star of the show.
 
+**Watch the Video Version**: If you prefer video content, here's the complete video walkthrough of this Day 1 practical implementation:
+
+<div class="aspect-w-16 aspect-h-9 rounded-lg overflow-hidden border-2 shadow-xl mb-8">
+  <iframe 
+    src="https://www.youtube.com/embed/CxwpADKSaEA?si=_byZ_G3LEsEwmYg-" 
+    frameborder="0" 
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+    referrerpolicy="strict-origin-when-cross-origin" 
+    allowfullscreen
+    title="Wanderer's Log #2 & Home Data Center Day 1: Practical POC Video Guide"
+    class="w-full h-full">
+  </iframe>
+</div>
+
 <Image src={hardwareSpecsImage} alt="Hardware Specifications Comparison" class="w-full h-auto rounded-lg shadow-lg mb-8" />
 
 
