--- a/src/content/posts/day-0-blueprint-a-small-scale-poc.mdx
+++ b/src/content/posts/day-0-blueprint-a-small-scale-poc.mdx
@@ -25,6 +25,20 @@ This post marks the transition from high-level goals and constraints to crafting
 
 Consider this your guide to translating ambition into an actionable Day 0 strategy. If you're ready to map out the first phase of your home data center build, let's dive into the blueprint!
 
+**Watch the Video Version**: If you prefer video content, here's the complete video walkthrough of this Day 0 blueprint planning process:
+
+<div class="aspect-w-16 aspect-h-9 rounded-lg overflow-hidden border-2 shadow-xl mb-8">
+  <iframe 
+    src="https://www.youtube.com/embed/CBt9HjybNRY?si=jb4nHz8U_IUfPmt_" 
+    frameborder="0" 
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+    referrerpolicy="strict-origin-when-cross-origin" 
+    allowfullscreen
+    title="Chronicles of a Home Data Center: Day 0 Blueprint Video Guide"
+    class="w-full h-full">
+  </iframe>
+</div>
+
 ## Defining the Day 0 Blueprint: Strategy Before Setup
 
 <Image 
