--- a/src/content/posts/day-0-blueprint-a-small-scale-poc.mdx
+++ b/src/content/posts/day-0-blueprint-a-small-scale-poc.mdx
@@ -25,7 +25,7 @@ This post marks the transition from high-level goals and constraints to crafting
 
 Consider this your guide to translating ambition into an actionable Day 0 strategy. If you're ready to map out the first phase of your home data center build, let's dive into the blueprint!
 
-**Watch the Video Version**: If you prefer video content, here's the complete video walkthrough of this Day 0 blueprint planning process:
+**Watch the Video Version or Listen to the Podcast**: If you prefer video content, here's the complete video walkthrough of this Day 0 blueprint planning process:
 
 <div class="aspect-w-16 aspect-h-9 rounded-lg overflow-hidden border-2 shadow-xl mb-8">
   <iframe 
@@ -38,6 +38,10 @@ Consider this your guide to translating ambition into an actionable Day 0 strate
     class="w-full h-full">
   </iframe>
 </div>
+
+Or if you prefer audio format, you can listen to the podcast version on Spotify:
+
+<iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/episode/7fAKf1mML3rhzRYCJXJSYT?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 
 ## Defining the Day 0 Blueprint: Strategy Before Setup
 
