--- a/src/content/posts/wanderers-log-2-home-data-center-day-1-practical-poc-single-node.mdx
+++ b/src/content/posts/wanderers-log-2-home-data-center-day-1-practical-poc-single-node.mdx
@@ -33,7 +33,7 @@ However, as promised, this series is a guide. For today, we'll focus on a Proof 
 
 For this Day 1, we will focus on one computer device. So, choose one machine to be the star of the show.
 
-**Watch the Video Version**: If you prefer video content, here's the complete video walkthrough of this Day 1 practical implementation:
+**Watch the Video Version or Listen to the Podcast**: If you prefer video content, here's the complete video walkthrough of this Day 1 practical implementation:
 
 <div class="aspect-w-16 aspect-h-9 rounded-lg overflow-hidden border-2 shadow-xl mb-8">
   <iframe 
@@ -46,6 +46,10 @@ For this Day 1, we will focus on one computer device. So, choose one machine to 
     class="w-full h-full">
   </iframe>
 </div>
+
+Or if you prefer audio format, you can listen to the podcast version on Spotify:
+
+<iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/episode/4rfQk32MB5OhBk98rpErh4?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 
 <Image src={hardwareSpecsImage} alt="Hardware Specifications Comparison" class="w-full h-auto rounded-lg shadow-lg mb-8" />
 
